--- a/app/src/main/res/layout/fragment_hello_world.xml
+++ b/app/src/main/res/layout/fragment_hello_world.xml
@@ -4,6 +4,7 @@
     android:layout_height="match_parent"
     android:paddingTop="10dp"
     android:paddingBottom="10dp"
+    android:background="@color/colorPrimaryLight"
     >
 
     <TextView
@@ -11,6 +12,8 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:gravity="center"
+        android:textColor="@color/white"
+        android:textSize="34sp"
         />
 
 </LinearLayout>
