--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,6 +11,16 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
+        <android.support.v4.view.PagerTitleStrip
+            android:id="@+id/pager_title_strip"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="top"
+            android:paddingTop="10dp"
+            android:paddingBottom="10dp"
+            >
+        </android.support.v4.view.PagerTitleStrip>
+
     </android.support.v4.view.ViewPager>
 
 </android.support.constraint.ConstraintLayout>
