--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,15 +11,18 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
-        <android.support.v4.view.PagerTitleStrip
-            android:id="@+id/pager_title_strip"
+        <android.support.design.widget.TabLayout
+            android:id="@+id/tab_layout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="top"
-            android:paddingTop="10dp"
-            android:paddingBottom="10dp"
+            app:tabTextColor="@color/white"
+            app:tabSelectedTextColor="@color/colorAccent"
+            app:tabBackground="@color/colorPrimary"
+            app:tabIndicatorColor="@color/colorAccentDarker"
             >
-        </android.support.v4.view.PagerTitleStrip>
+        </android.support.design.widget.TabLayout>
+
 
     </android.support.v4.view.ViewPager>
 
