--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,7 +2,9 @@
 <resources>
     <color name="colorPrimary">#3F51B5</color>
     <color name="colorPrimaryDark">#303F9F</color>
+    <color name="colorPrimaryDarkest">#1a237e</color>
     <color name="colorAccent">#FF4081</color>
+    <color name="colorAccentDarker">#F50057</color>
     <color name="colorPrimaryLight">#757de8</color>
     <color name="white">#ffffff</color>
 </resources>
